<resources>
    <string name="app_name">Yggdrasil VPN</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_connected">Connected</string>
    <string name="status_no_connectivity">No connectivity</string>
    <string name="connect_button_desc">Connect / Disconnect VPN</string>
    <string name="mode_exit_vpn">Exit VPN Mode</string>
    <string name="mode_yggdrasil">Yggdrasil Network Mode</string>
    <string name="your_ip_address">IP Address</string>
    <string name="your_subnet">Subnet</string>
    <string name="not_connected">Not connected</string>
    <string name="copy_ip">Copy IP address</string>
    <string name="peers_title">Peers</string>
    <string name="settings_title">Settings</string>
    <string name="notification_connected">VPN is active</string>
    <string name="notification_connecting">Connecting to VPN…</string>
    <string name="notification_disconnect">Disconnect</string>
    <string name="dns_configured_servers_hint">Use these DNS servers while Yggdrasil is running. Note that all DNS requests, including for non-Yggdrasil internet hostnames, will be sent to these servers.</string>
    <string name="dns_configured_servers_hint_empty">Yggdrasil will not configure any DNS servers when the service starts. All DNS requests will be resolved by the default resolver.</string>
    <string name="dns_usable_servers_hint">These DNS servers are provided by community members. Click the + button to add them to the list above. Long-tap to see more info.</string>
    <string name="dns_no_configured_servers">No servers configured</string>
    <string name="dns_configured_servers">Configured servers</string>
    <string name="dns_server_info_revertron">The server supports resolving regular ICANN domains, ALFIS domains, OpenNIC domains.\n\nAlso, it blocks ads, analytics and malware websites.\n\nThe server is run by Revertron.</string>
    <string name="dns_server_info_dialog_title">Server info</string>
    <string name="ok">OK</string>
    <string name="battery_optimization_title">Background Operation</string>
    <string name="battery_optimization_message">To keep the VPN running reliably in the background, please disable battery optimization for Yggdrasil VPN. This prevents Android from stopping the VPN when the screen is off.</string>
    <string name="notification_permission_title">Allow Notifications</string>
    <string name="notification_permission_message">Yggdrasil VPN shows a persistent notification while connected so you can quickly disconnect from the notification shade. Please allow notifications to enable this feature.</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="dns_add_server_dialog_title">Add DNS server</string>
    <string name="dns_activity_title">DNS</string>
    <string name="dns_usable_servers">Usable servers</string>
    <string name="dns_fix_chrome_based_browsers">Fix Chrome-based browsers</string>
    <string name="dns_fix_chrome_based_browsers_hint">If you do not have IPv6 internet connectivity, this option should help Chrome-based browsers to resolve Yggdrasil domain names correctly.</string>
    <string name="dns_fixes">DNS fixes</string>
    <string name="dns_no_servers">No servers</string>
    <string name="dns_one_server">1 server</string>
    <string name="dns_many_servers">%d servers</string>
    <string name="dns_remove_title">Remove %s?</string>
    <string name="dns_already_added_server">This server is already added.</string>
    <string name="main_no_connectivity">Enabled (No connectivity)</string>
    <string name="main_enabled">Connected</string>
    <string name="main_disabled">Not enabled</string>
    <string name="main_no_peers">No peers</string>
    <string name="main_one_peer">1 peer</string>
    <string name="main_many_peers">%d peers</string>
    <string name="main_add_some_peers_title">Note</string>
    <string name="main_add_some_peers_message">No peers are configured. If there are no multicast peers nearby, you will need to manually configure peers in order for Yggdrasil to connect and work properly.</string>
    <string name="main_status">Status</string>
    <string name="main_enable_yggdrasil">Enable Yggdrasil</string>
    <string name="main_network_info">Network info</string>
    <string name="main_not_available">N/A</string>
    <string name="main_ip">IP</string>
    <string name="main_subnet">Subnet</string>
    <string name="main_configuration">Configuration</string>
    <string name="main_peers">Peers</string>
    <string name="main_dns_servers">DNS servers</string>
    <string name="main_settings">Settings</string>
    <string name="main_version">Version</string>
    <string name="main_unknown">Unknown</string>
    <string name="main_bottom_warning">You must re-enable Yggdrasil after modifying Peers, DNS servers or Settings to make any changes effective.</string>
    <string name="peers_add_peer">Add Configured Peer</string>
    <string name="peers_add">Add</string>
    <string name="peers_remove_title">Remove %s?</string>
    <string name="peers_remove">Remove</string>
    <string name="peers_no_configured_title">No peers currently configured</string>
    <string name="peers_configured_title">Configured Peers</string>
    <string name="peers_no_connected_title">No peers currently connected</string>
    <string name="peers_connected_title">Connected Peers</string>
    <string name="peer_connectivity_title">Peer Connectivity</string>
    <string name="discoverable_over_multicast">Discoverable over multicast</string>
    <string name="search_for_multicast_peers">Search for multicast peers</string>
    <string name="configured_peers_hint">Yggdrasil will automatically attempt to connect to configured peers when started. If you configure more than one peer, your device may carry traffic on behalf of other network nodes. Avoid this by configuring only a single peer.</string>
    <string name="peers_discovery_hint">You can find public peers by opening <a href="https://publicpeers.neilalexander.dev/">this link</a>.</string>
    <string name="multicast_title">Multicast</string>
    <string name="peers_discovery_link">You can find public peers at publicpeers.neilalexander.dev</string>
    <string name="peer_connectivity_hint">Multicast peers will be discovered on the same Wi-Fi network or via USB. They must have the same password. Data charges may apply when using mobile data. You can prevent data usage in the device settings.</string>
    <string name="peers_multicast_password_hint">Password</string>
    <string name="public_peers_title">Public Peers</string>
    <string name="public_peers_subtitle">Select peers from the community list</string>
    <string name="public_peers_loading">Loading public peers…</string>
    <string name="public_peers_error">Failed to load public peers</string>
    <string name="public_peers_retry">Retry</string>
    <string name="public_peers_add_selected">Add Selected</string>
    <string name="public_peers_already_added">Already added</string>
    <string name="public_peers_added_count">Added %d peers</string>
    <string name="public_peers_browse">Browse Public Peers</string>
    <string name="public_peers_filter_all">All</string>
    <string name="settings_warning_title">Warning</string>
    <string name="settings_config">Config</string>
    <string name="settings_reset">Reset</string>
    <string name="node_info">Node Info</string>
    <string name="device_name">Device Name</string>
    <string name="tap_to_edit">Tap to edit</string>
    <string name="node_info_hint">Information entered here is public and may be shown on network maps.</string>
    <string name="public_key">Public Key</string>
    <string name="public_key_hint">Your public key forms your identity on the network. It is safe to be shared.</string>
    <string name="regenerate_keys">Regenerate keys (and IPv6-address)</string>
    <string name="reset_configuration">Reset configuration</string>
    <string name="reset_configuration_hint">Resetting will overwrite with newly generated configuration. Your public keys and IP address on the network will change.</string>
    <string name="private_key_label">Private key:</string>
    <string name="set_keys">Set your own key</string>
    <string name="save">Save</string>
    <string name="no_browser_found_toast">No browser found to open the URL!</string>
    <string name="exit_vpn_settings">Exit VPN Settings</string>
    <string name="exit_vpn_enabled">Enable Exit VPN</string>
    <string name="exit_vpn_remote_addr">Remote Yggdrasil IPv6</string>
    <string name="exit_vpn_inner_ip">Inner VPN IPv4</string>
    <string name="exit_vpn_remote_port">Remote UDP port</string>
    <string name="exit_vpn_local_port">Local UDP port</string>
    <string name="exit_vpn_dns_server_1">DNS 1</string>
    <string name="exit_vpn_dns_server_2">DNS 2</string>
    <string name="exit_vpn_mtu">MTU</string>
    <string name="exit_vpn_excluded_apps">Excluded apps</string>
    <string name="exit_vpn_select_excluded_apps">Select excluded apps</string>
    <string name="exit_vpn_excluded_apps_none">No excluded apps selected</string>
    <string name="exit_vpn_excluded_apps_loading">Loading application list…</string>
    <string name="exit_vpn_hint">These are app-level runtime settings for Exit VPN mode and are stored separately from node configuration.</string>
    <string name="exit_vpn_server_desc">Server address and ports for the Exit VPN tunnel</string>
    <string name="exit_vpn_dns_desc">DNS servers used when Exit VPN is active</string>
    <string name="exit_vpn_inner_ip_error">Use a valid IPv4 host address (not .0, .1, or .255)</string>
    <string name="exit_vpn_excluded_desc">Apps that bypass the VPN tunnel</string>
    <string name="exit_vpn_profiles">Saved servers</string>
    <string name="exit_vpn_config_name">Display name</string>
    <string name="exit_vpn_config_add">Add server</string>
    <string name="exit_vpn_config_delete">Delete server</string>
    <string name="exit_vpn_unnamed_config">Unnamed server</string>
    <string name="exit_vpn_config_delete_last_error">At least one server must remain</string>
    <string name="exit_vpn_config_delete_confirm_title">Delete %s?</string>
    <string name="exit_vpn_config_delete_confirm_message">The server profile will be removed from the list.</string>
    <string name="exit_vpn_new_server_default_name">Server %d</string>
    <string name="exit_vpn_excluded_apps_global_title">Excluded apps (all servers)</string>
    <string name="tile_disabled">Disabled</string>
    <string name="tile_enabled">Enabled (No connectivity)</string>
    <string name="tile_connected">Connected</string>
    <string name="location_amsterdam">Amsterdam, NL</string>
    <string name="location_frankfurt">Frankfurt, DE</string>
    <string name="location_bratislava">Bratislava, SK</string>
    <string name="location_buffalo">Buffalo, US</string>
    <string name="channel_name">VPN Service</string>
    <string name="channel_description">Main channel for foreground notification</string>
    <string name="permission_notification_text">Tap here to enable Yggdrasil VPN.</string>
    <string name="add_peer_help">Enter the full URI of the peer to add. Yggdrasil will automatically connect to this peer when started.</string>
    <string name="peer_invalid_uri">Invalid URI format</string>
    <string name="peer_invalid_scheme">Scheme must be one of: %s</string>
    <string name="peer_missing_host">Host is required</string>
    <string name="peer_missing_port">Port is required</string>
    <string name="language_title">Language</string>
    <string name="language_english">English</string>
    <string name="language_russian">Russian</string>
    <string name="yggdrasil_dns_title">Yggdrasil DNS</string>
</resources>